# rust-rag

./: .gitignore  README.md  pixi.toml  pyproject.toml
notebooks/: 01-book-rag.ipynb
src/: convert_html_to_txt.sh
