[tool.poetry]
name = "rust-rag"
version = "0.1.0"
description = ""
authors = ["amaralcs <amaralcscgp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.3"
black = "^24.10.0"
numpy = "<2"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
ipykernel = "^6.29.5"
transformers = "^4.46.2"
tqdm = "^4.67.0"
arize-phoenix = "^5.7.0"
mlflow = "^2.17.2"
chromadb = "^0.5.18"
llama-index = "^0.11.22"
llama-index-finetuning = "^0.2.1"
llama-index-vector-stores-chroma = "^0.3.0"
llama-index-llms-ollama = "^0.3.6"
llama-index-embeddings-huggingface = "^0.3.1"
llama-index-retrievers-bm25 = "^0.4.0"
llama-index-callbacks-arize-phoenix = "^0.2.1"
ipywidgets = "^8.1.5"
xformers = "^0.0.28.post3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
